--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ body {
     color: red;
 }
 
-#restart-button {
+#play-again-button {
     padding: 10px 20px;
     font-size: 18px;
     cursor: pointer;
@@ -239,7 +239,7 @@ body {
         font-size: 32px;  /* Adjust heading sizes */
     }
 
-    #start-button, #restart-button {
+    #start-button, #play-again-button {
         font-size: 16px;  /* Adjust button sizes */
     }
 }
