--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ body {
 
 .popup-content {
     background-color: white;
-    margin: 15% auto;
+    margin: 12% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
@@ -193,7 +193,11 @@ body {
 }
 
 .popup-content h2 {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+}
+
+.popup-content p {
+    font-size: 17px;
 }
 
 #close-popup {
@@ -250,6 +254,14 @@ body {
     #bee {
         width: 50px;  /* Adjust fly size for smaller screens */
         height: 50px;
+    }
+
+    .popup-content {
+        margin: 20% auto;
+    }
+
+    .popup-content p {
+        font-size: 20px;
     }
 
     #time-select {
